css/repost.css
/**
 * repost css.
 * color palette 
 *  9D98E8
 *  C4A7FF
 *  B4C3FF
 *  98BEE8
 *  A7E7FF
 */

/**
 * Fonts 
 */
@font-face { 
    font-family: "Abel"; 
    src: url('chrome-extension://__MSG_@@extension_id__/css/Abel-Regular.ttf');
}
/**
 * Repost commons
 */
#repost span.name {
    cursor: pointer;
}
/**
 * Floating Boxes
 */
/* Add Account Dialog */
#repost .confirmation.accountaddbox#rpdialog {
    width: 210px;
    height: 205px;
}
#repost .confirmation.accountaddbox#rpdialog .title{
    font-size: x-large;
}
#repost .confirmation.accountaddbox#rpdialog .ok{
    top: 180px;
    left: 10px;
}
#repost .confirmation.accountaddbox#rpdialog .cancel{
    top: 180px;
    left: 110px;
}
#repost .confirmation.accountaddbox#rpdialog input.username{
    width: 200px;
}
#repost .confirmation.accountaddbox#rpdialog input.password{
    width: 200px;
}
/* Add Link Dialog */
#repost .confirmation.linkaddbox#rpdialog {
    width: 210px;
    height: 110px;
}
#repost .confirmation.linkaddbox#rpdialog .title{
    font-size: x-large;
}
#repost .confirmation.linkaddbox#rpdialog .ok{
    top: 90px;
    left: 10px;
}
#repost .confirmation.linkaddbox#rpdialog .cancel{
    top: 90px;
    left: 110px;
}
#repost .confirmation.linkaddbox#rpdialog input.linkinput{
    width: 200px;
}
/* Remove Link Dialog */
#repost .confirmation.linkremover#rpdialog {
    width: 210px;
    height: 90px;
}
#repost .confirmation.linkremover#rpdialog .title{
    font-size: x-large;
}
#repost .confirmation.linkremover#rpdialog .ok{
    top: 70px;
    left: 10px;
}
#repost .confirmation.linkremover#rpdialog .cancel{
    top: 70px;
    left: 110px;
}
#repost .confirmation.linkremover#rpdialog input.linkinput{
    width: 200px;
}
/* rpdialog submenu */
#repost #rpdialog div.menuopt{
    cursor: pointer;
}
#repost #rpdialog div.menuopt:hover{
    background:#777777;
}
/**
 * Links
 */
/*TOOLTIPS*/
#repost .tip {
    font-family: 'Abel', Helvetica, Arial, sans-serif;
    text-align: left;
    width:auto;
    max-width:500px;
    z-index:1000;
}
#repost .tip-title {
    font-family: 'Abel', Helvetica, Arial, sans-serif;
    font-size: 11px;
    text-align:center;
    margin-bottom:2px;
    z-index:1000;
}
#repost .linkbox{
  top: 10%;
  height: 80%;
  left: 10%;
  width: 80%;
 }
#repost #infovis{
    opacity:1;
    margin: auto;
    top: 1%;
    height: 98%;
    left: 1%;
    width: 98%;
}
#repost caption{
    position: absolute;
    left:10px;
    top:20px;
    margin: 15px 5px 15px 0px;
}
#repost .content{
    position:absolute;
    left:10px;
    top:50px;
    margin: 15px 5px 15px 0px;
}
#repost .contentinput{
    position:absolute;
    left:100px;
    top:50px;
    margin: 15px 5px 15px 0px;
}
#repost .sendtext{
    position:absolute;
    left:150px;
    top:110px;
    width:130px;
}
#repost .contenttext{
}
/**
 * Post table
 */
#repost div.divtable {
    top:65px;
    left:5%;
    width:90%;
}
/**
 * Post styles 
 */
#repost div.divtable .post{
    float:left;
    width: 300px;
    min-height: 50px;
    text-align:center;
    margin: 10px;
}  
/* Post mask */
#repost div.divtable .post .postmask{
    background-color:#000;
    opacity:0.8;
    z-index:9000;
		pointer-events: none;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    padding: 5%;
}
#repost div.divtable .post .postmask img.downvote {
    cursor: pointer;
    position: absolute;
		pointer-events: auto;
    bottom: 5px;
    right: 7px;
    z-index: 999;
    height: 20px;
    width: 20px;
}
#repost div.divtable .post .postmask img.upvote {
    cursor: pointer;
    position: absolute;
		pointer-events: auto;
    bottom: 5px;
    right: 30px;
    z-index: 999;
    height: 20px;
    width: 20px;
}
#repost div.divtable .post .postmask div.metric {
    position: absolute;
    bottom: 5px;
    right: 55px;
    z-index: 999;
    color: white;
    line-height: normal;
}
#repost div.divtable .post .postmask .postmaskcaption{
    color: white;
    line-height: normal;
}
#repost div.divtable .post.imagepost {
   height: 300px;
   overflow: hidden;
}
/* Text post */
#repost div.divtable .post.textpost {
    width: 200px;
    color: #757575;
    font-family: 'Abel', Helvetica, Arial, sans-serif;
    font-size: x-large;
    font-weight: 800;
    word-wrap: break-word;
}
#repost div.divtable div.post.textpost.size1 {
    width: 160px;
    height: 100px;
    /* Hack for single line text. Vertical center */
    line-height: 100px; /* Same height as div */
}
#repost div.divtable div.post.textpost.size2 {
    height: 200px;
    width: 160px;
}
#repost div.divtable div.post.textpost.size3 {
    width: 320px;
    height: 200px;
}
/**
 * Menu Bar
 */
#repost #repostMenu {
    position: fixed;
    top: 0px;
    left: 10%;
    width: 80%;
    height: 50px;
}
#repost #repostMenu .statusCircle {
    width: 10px;
    height: 10px;
    -moz-border-radius:10px;
    -webkit-border-radius:10px;
    background: #FC4023;
}
#repost #repostMenu #repostLogo {
    float: left;
    margin: 0px;
}
#repost #repostMenu .toolbar {
    margin: 0px;
}
#repost #repostMenu .toolbar li {
    display: inline;
    padding: 0.5em;
    padding: 0.5em;
    float: right;
}
#repost #repostMenu .toolbar li a {
    text-decoration: none;
    text-transform: uppercase;
    color: #757575;
    font-family: 'Abel', Helvetica, Arial, sans-serif;
    font-size: 20px;
}

/**
 * General Settings
 */
#repost {
}
body {
     -khtml-user-select: none; /* webkit browsers */
    background: #ececec;
}
#repost #mask {
    position: fixed;
    display: none;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color:#000;
    opacity:0.8;
    z-index:9000;
}

